force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Associates vehicles to contracts</description>
    <label>Location</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>