force-app/main/default/objects/Location__c/fields/Nombre_de_vehicules_du_contrat__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_vehicules_du_contrat__c</fullName>
    <formula>Contract__r.Nombre_de_Vehicules__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de véhicules du contrat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>