force-app/main/default/objects/Location__c/fields/Type_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Type_de_contrat__c</fullName>
    <formula>Contract__r.Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de contrat</label>
    <type>Text</type>
</CustomField>